FinalV_ Pre Sort Error fix

--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,23 @@
 			<artifactId>jakarta.xml.bind-api</artifactId>
 			<version>4.0.1</version>
 		</dependency>
+        <dependency>
+            <groupId>javax.inject</groupId>
+            <artifactId>javax.inject</artifactId>
+            <version>1</version>
+        </dependency>
+		<dependency>
+			<groupId>javax.json.bind</groupId>
+			<artifactId>javax.json.bind-api</artifactId>
+			<version>1.0</version>
+		</dependency>
+		<!-- Jakarta XML Binding (JAXB) -->
+		<dependency>
+			<groupId>org.glassfish.jaxb</groupId>
+			<artifactId>jaxb-runtime</artifactId>
+			<version>4.0.2</version> <!-- Use a version that is compatible with your Spring Boot version -->
+		</dependency>
+		<!-- EclipseLink MOXy -->
 	</dependencies>
 
 	<build>
